# CudaGeneticAlgorithm

./: CMakeLists.txt  GA_CPU.h  GA_GPU.cu  GA_GPU.cuh  Polynomial.h  README.MD  main.cpp
